Added analytics tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,24 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- @Google Analytics -->
+
+  <!-- @Global site tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C1ECHGQLBQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-C1ECHGQLBQ');
+  </script>
+
 </head>
+
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-spy-scroll" data-bs-offset="250" data-bs-method="offset">
 
@@ -33,7 +50,9 @@
 
     <div class="container-fluid" id="navbar-spy-scroll">
 
-      <a class="navbar-brand" href=""> <h1> Felipe del Canto </h1> </a>
+      <a class="navbar-brand" href="">
+        <h1> Felipe del Canto </h1>
+      </a>
 
       <button class="navbar-toggler custom-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-expanded="false">
         <span class="toggler-icon top-bar"></span>
@@ -95,8 +114,7 @@
         <!-- @The effect of regularization in portfolio selection problems -->
         <div class="research-element">
           <div class="mr-auto paper-title">
-            <a class="paper-link"
-              href="https://link.springer.com/article/10.1007/s11750-020-00578-7">
+            <a class="paper-link" href="https://link.springer.com/article/10.1007/s11750-020-00578-7">
               The effect of regularization in portfolio selection problems
             </a>
           </div>
