Disabled unfinished links

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <ul class="navbar-nav ms-auto">
           <a class="active nav-link scroll-link" href="#about-me">About me</a>
           <a class="nav-link scroll-link" href="#research">Research</a>
-          <a class="nav-link" href="teaching.html">Teaching</a>
-          <a class="nav-link" href="coursework.html">Coursework</a>
+          <a class="nav-link disabled" href="teaching.html">Teaching</a>
+          <a class="nav-link disabled" href="coursework.html">Coursework</a>
           </li>
         </ul>
       </div>
