Finish Teaching section. Testing favicons

--- a/coursework.html
+++ b/coursework.html
@@ -38,7 +38,7 @@
 
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="index.html">Felipe del Canto</a>
+      <a class="navbar-brand" href="index.html"><h1> Felipe del Canto </h1></a>
 
       <button class="navbar-toggler custom-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
         <span class="toggler-icon top-bar"></span>
