--- a/coursework.html
+++ b/coursework.html
@@ -14,7 +14,14 @@
   <meta name="description" content="Felipe del Canto's personal page. Mathematician and Economist. My main interests are in the intersection between Computer Science and Economics.">
   <meta name="keywords" content="Felipe, del Canto, Economics, Chile, Computer Science, Econ, CS">
 
-  <!-- <link rel="shortcut icon" href=""> -->
+  <!-- @Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#334257">
+  <meta name="msapplication-TileColor" content="#eeeeee">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- @ CSS Stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
