--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" style="scroll-behavior:auto;">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -12,19 +12,13 @@
   <meta name="keywords" content="Felipe, del Canto, Economics, Chile, Computer Science, Econ, CS">
 
   <!-- @Icons -->
-
-  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-  <link rel="manifest" href="icons/site.webmanifest">
-  <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#334257">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#334257">
   <meta name="msapplication-TileColor" content="#eeeeee">
   <meta name="theme-color" content="#ffffff">
-
-  <!-- <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-  <link rel="manifest" href="icons/site.webmanifest"> -->
 
   <!-- @ CSS Stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -78,7 +72,7 @@
         <ul class="navbar-nav ms-auto">
           <a class="active nav-link scroll-link" href="#about-me">About me</a>
           <a class="nav-link scroll-link" href="#research">Research</a>
-          <a class="nav-link disabled" href="teaching.html">Teaching</a>
+          <a class="nav-link" href="teaching.html">Teaching</a>
           <a class="nav-link disabled" href="coursework.html">Coursework</a>
           </li>
         </ul>
