--- a/coursework.html
+++ b/coursework.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" style="scroll-behavior:auto;">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
 
   <!-- @ Head  -->
-
-
   <title>Felipe del Canto</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,11 +13,11 @@
   <meta name="keywords" content="Felipe, del Canto, Economics, Chile, Computer Science, Econ, CS">
 
   <!-- @Icons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#334257">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#334257">
   <meta name="msapplication-TileColor" content="#eeeeee">
   <meta name="theme-color" content="#ffffff">
 
@@ -34,7 +32,21 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
+
+  <!-- @Google Analytics -->
+
+  <!-- @Global site tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C1ECHGQLBQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-C1ECHGQLBQ');
+  </script>
 
 </head>
 
@@ -45,7 +57,9 @@
 
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="index.html"><h1> Felipe del Canto </h1></a>
+      <a class="navbar-brand" href="index.html">
+        <h1> Felipe del Canto </h1>
+      </a>
 
       <button class="navbar-toggler custom-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
         <span class="toggler-icon top-bar"></span>
@@ -56,10 +70,10 @@
       <div class="collapse navbar-collapse" id="navbarToggler">
 
         <ul class="navbar-nav ms-auto">
-            <a class="nav-link" href="index.html#about-me">About me</a>
-            <a class="nav-link" href="index.html#research">Research</a>
-            <a class="nav-link" href="teaching.html">Teaching</a>
-            <a class="active nav-link" href="coursework.html">Coursework</a>
+          <a class="nav-link" href="index.html#about-me">About me</a>
+          <a class="nav-link" href="index.html#research">Research</a>
+          <a class="nav-link" href="teaching.html">Teaching</a>
+          <a class="active nav-link" href="coursework.html">Coursework</a>
         </ul>
       </div>
     </div>
@@ -92,7 +106,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- @ Additional Scripts -->
-  <script src="scripts.js">  </script>
+  <script src="scripts.js"> </script>
 
 
 </body>
