--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           state-of-the-art Machine and Deep learning algorithms to make sense of unstructured data like text, images, videos, or sounds; 2) learn how to make causal inference with these tools, and 3) understand the role of these techniques in our
           society, specifically how they preserve our biases.
         </p>
-        <p>You can look at my <a href="documents/Felipe%20Del%20Canto%20CV.pdf">CV here</a>.</p>
+        <p>You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
       </div>
     </div>
   </section>
@@ -171,7 +171,7 @@
         <!-- @Aggregate models require aggregate solutions? When heterogeneity is expendable -->
         <div class="research-element">
           <div class="mr-auto paper-title">
-            <a class="paper-link" href="documents/Interdimensional dependence.pdf">A complex net of intertwined complements: Measuring interdimensional dependence among the poor</a>
+            <a class="paper-link" href="documents/other/Interdimensional dependence.pdf">A complex net of intertwined complements: Measuring interdimensional dependence among the poor</a>
             </a>
           </div>
           <div class="mr-auto paper-collaborators">
