--- a/teaching.html
+++ b/teaching.html
@@ -102,7 +102,7 @@
                 <!-- @Motivation -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Motivation </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/1 - Motivación.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/1%20-%20Motivación.pdf">Slides</a> </div>
                 </li>
 
                 <!-- @General Concepts -->
