--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <!--@ Font Awesome -->
-  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <script src="https://kit.fontawesome.com/d1e054ce54.js" crossorigin="anonymous"></script>
 
   <!-- @Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -93,6 +93,7 @@
           <a href="http://github.com/pipeton8"><i class="personal-icon fab fa-github fa-lg"></i></a>
           <a href="mailto:felipe.delcanto@icloud.com"><i class="personal-icon fas fa-envelope fa-lg"></i></a>
           <a href="http://twitter.com/pipeton8"><i class="personal-icon fab fa-twitter fa-lg"></i></a>
+          <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon fab fa-orcid fa-lg"></i></a>
         </div>
       </div>
 
