--- a/teaching.html
+++ b/teaching.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <!--@ Font Awesome -->
-  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <script src="https://kit.fontawesome.com/d1e054ce54.js" crossorigin="anonymous"></script>
 
   <!-- @Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
