Disable "Coursework" link in teaching.html

--- a/teaching.html
+++ b/teaching.html
@@ -73,7 +73,7 @@
           <a class="nav-link" href="index.html#about-me">About me</a>
           <a class="nav-link" href="index.html#research">Research</a>
           <a class="active nav-link" href="teaching.html">Teaching</a>
-          <a class="nav-link" href="coursework.html">Coursework</a>
+          <a class="nav-link disabled" href="coursework.html">Coursework</a>
         </ul>
       </div>
     </div>
