Fix script link in teaching.html and coursework.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <!-- @ About me Section -->
   <section class="centered-section" id="about-me">
 
-    <!-- @ About me -->
+    <!-- @ Image and Icons -->
     <div class="row g-0 container-fluid section-container">
 
       <div class="image-container col-lg-5 col-md-6">
@@ -97,6 +97,7 @@
         </div>
       </div>
 
+      <!-- @ Text -->
       <div class="about-me-text col-lg-7 col-md-6">
         <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
         </p>
