--- a/teaching.html
+++ b/teaching.html
@@ -442,7 +442,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- @ Additional Scripts -->
-  <script src="scripts.js"> </script>
+  <script src="scripts/scripts.js"> </script>
 
 </body>
 
