Fix documents problem. Add tooltip for "Coursework" section

--- a/teaching.html
+++ b/teaching.html
@@ -73,7 +73,9 @@
           <a class="nav-link" href="index.html#about-me">About me</a>
           <a class="nav-link" href="index.html#research">Research</a>
           <a class="active nav-link" href="teaching.html">Teaching</a>
-          <a class="nav-link disabled" href="coursework.html">Coursework</a>
+          <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" title="Under construction">
+            <a class="nav-link disabled" href="coursework.html">Coursework</a>
+          </span>
         </ul>
       </div>
     </div>
@@ -96,7 +98,6 @@
             <div class="card border-dark">
               <div class="card-body">
                 <h5 class="card-title mb-0">Part I: Introduction</h5>
-                <!-- <p class="card-text">Review of marginalism, rationality, causality problem, efficiency, effectiveness and equity. Then, motivate the course with the FPP model.</p> -->
               </div>
               <ul class="list-group list-group-flush">
                 <!-- @Motivation -->
@@ -161,7 +162,7 @@
                 <!-- @Price Controls -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Price Controls </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/10 - Fijación de precios.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/10 - Fijacion de precios.pdf">Slides</a> </div>
                 </li>
 
                 <!-- @Taxes -->
@@ -179,7 +180,7 @@
                 <!-- @Theory of the Firm -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Theory of the Firm </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/13, 14 y 15 - Teoría de la firma.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/13, 14 y 15 - Teoria de la firma.pdf">Slides</a> </div>
                 </li>
 
                 <!-- @The firm in a Competitive Market  -->
@@ -197,7 +198,7 @@
                 <!-- @Public and Common Goods -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Public and Common Goods </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/17,5 - Bienes públicos y recursos comunes.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/17,5 - Bienes publicos y recursos comunes.pdf">Slides</a> </div>
                 </li>
 
                 <!-- @Externalities -->
@@ -215,7 +216,6 @@
             <div class="card border-dark">
               <div class="card-body">
                 <h5 class="card-title mb-0">Part III: Macroeconomics</h5>
-                <!-- <p class="card-text">Review of national accounts, determinants of growth, CPI, inflation, determinants of unemployment, inequality and poverty.</p> -->
               </div>
               <ul class="list-group list-group-flush">
                 <!-- @National accounts -->
@@ -239,7 +239,7 @@
                 <!-- @Monetary system and inflation -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Monetary system and inflation </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/24, 25 y 26 - Sistema monetario e inflación.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAE105A-2021-1/24, 25 y 26 - Sistema monetario e inflacion.pdf">Slides</a> </div>
                 </li>
 
                 <!-- @Unemployment -->
@@ -271,7 +271,6 @@
             <div class="card border-dark h-100">
               <div class="card-body">
                 <h5 class="card-title mb-0">Part I: Introduction</h5>
-                <!-- <p class="card-text">Review of multivariate calculus and comparative statics tools.</p> -->
               </div>
               <ul class="list-group list-group-flush">
                 <!-- @Motivation  -->
@@ -289,13 +288,13 @@
                 <!-- @Comparative Statics Tools -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Comparative Statics Tools </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/2.1 - Técnicas de estática comparativa.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/2.1 - Tecnicas de estatica comparativa.pdf">Slides</a> </div>
                 </li>
 
                 <!-- @Homogeneous and Homothetic Functions -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Homogeneous and Homothetic Functions </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/2.2 - Funciones homogéneas y homotéticas.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/2.2 - Funciones homogeneas y homoteticas.pdf">Slides</a> </div>
                 </li>
               </ul>
             </div>
@@ -341,7 +340,7 @@
                 <!-- @First Order Conditions  -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Lagrange Method </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/4.1 - Método de Lagrange.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/4.1 - Metodo de Lagrange.pdf">Slides</a> </div>
                 </li>
 
                 <!-- @Concavity and Convexity -->
@@ -353,7 +352,7 @@
                 <!-- @Second Order Conditions -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Multiplier Interpretation and Envelope Theorem </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/4.3 - Interpretación del multiplicador y teorema de la envolvente.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/4.3 - Interpretacion del multiplicador y teorema de la envolvente.pdf">Slides</a> </div>
                 </li>
 
                 <!-- @Generalizations -->
@@ -388,7 +387,7 @@
                 <!-- @Second Order Conditions -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Multiplier Interpretation and Envelope Theorem </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/5.3 - Interpretación del multiplicador y teorema de la envolvente.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/5.3 - Interpretacion del multiplicador y teorema de la envolvente.pdf">Slides</a> </div>
                 </li>
               </ul>
             </div>
@@ -405,7 +404,7 @@
                 <!-- @Introduction to Dynamical Systems  -->
                 <li class="d-flex list-group-item class-item">
                   <div class="flex-grow-1"> Introduction to Dynamical Systems </div>
-                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/6.1 - Introducción a los sistemas dinámicos.pdf">Slides</a> </div>
+                  <div class="download-button"> <a class="btn slides-button btn-sm" href="documents/teaching/EAF2010-2021-1/6.1 - Introduccion a los sistemas dinamicos.pdf">Slides</a> </div>
                 </li>
 
                 <!-- @Difference Equations -->
