--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
           <a class="active nav-link scroll-link" href="#about-me">About me</a>
           <a class="nav-link scroll-link" href="#research">Research</a>
           <a class="nav-link" href="teaching.html">Teaching</a>
-          <a class="nav-link disabled" href="coursework.html">Coursework</a>
+          <span class="d-inline-block coursework-tooltip-lg" tabindex="0" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Under construction">
+            <a class="nav-link disabled" href="coursework.html">Coursework</a>
+          </span>
           </li>
         </ul>
       </div>
@@ -194,7 +196,6 @@
       <p>© 2021 Felipe del Canto</p>
   </footer>
 
-
   <!-- @JS and Popper -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
@@ -204,6 +205,7 @@
 
   <!-- @ Additional Scripts -->
   <script src="scripts/scripts.js"> </script>
+
 </body>
 
 </html>
