--- a/coursework.html
+++ b/coursework.html
@@ -28,6 +28,9 @@
   <!--@ Font Awesome -->
   <script src="https://kit.fontawesome.com/d1e054ce54.js" crossorigin="anonymous"></script>
 
+  <!-- @Friconix -->
+  <script defer src="https://friconix.com/cdn/friconix.js"> </script>
+
   <!-- @Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,10 +86,290 @@
   <section class="left-aligned-section" id="coursework">
 
     <div class="container-fluid section-container">
+      <!-- @At MIT -->
+      <h1 class="section-title">At MIT</h1>
+
+      <!-- @6.864 - Advanced NLP -->
+      <div class="course-container">
+        <h3 class="course-title"> 6.864 - Advanced NLP <a class="title-icon clickable-icon ms-2" href="https://github.com/pipeton8/6.864-advanced-nlp"><i class="fab fa-github"></i></a></h3>
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4">
+          <!-- @Assignment 0: Fundamentals Review -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Assignment 0</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%200/hw0.ipynb"> <i class="fi-xnsuxx-google-colab"></i> Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Fundamentals Review</h6>
+
+                <div class="btn-wrapper d-flex">
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%200/Assignment%200.pdf"> Problems</a> </div>
+                  <div> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%200/Assignment%200%20(Solution).pdf"> Report</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- @Assignment 1: Language Modeling -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Assignment 1</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%201/hw1.ipynb"> <i class="fi-xnsuxx-google-colab"></i> Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Language Modeling</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%201/Assignment%201.pdf"> Problems</a> </div>
+                  <div> <a class="btn card-button btn-sm disabled" href=""> Report</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- @Assignment 2: Representation Learning -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Assignment 2</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%202/hw2.ipynb"> <i class="fi-xnsuxx-google-colab"></i> Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Representation Learning</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%202/Assignment%202.pdf"> Problems</a> </div>
+                  <div> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%202/Assignment%202%20(Solution).pdf"> Report</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- @Assignment 3: Hidden Markov Models and Trees -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Assignment 3</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%203/hw3.ipynb"> <i class="fi-xnsuxx-google-colab"></i> Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> HMMs and Trees</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%203/Assignment%203.pdf"> Problems</a> </div>
+                  <div> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.864-advanced-nlp/blob/main/Assignments/Assignment%203/Assignment%203%20(Solution).pdf"> Report</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- @6.439 - Statistics, Computation and Applications -->
+      <div class="course-container">
+        <h3 class="course-title"> 6.439 - Statistics, Computation and Applications <a class="title-icon clickable-icon ms-2" href="https://github.com/pipeton8/6.439-stats-comp-applications"><i class="fab fa-github"></i></a> </h3>
+
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <!-- @Problem Set 1: Statistics Review -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Problem Set 1</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/1%20-%20Stats%20Review/Problem%20Set%201.ipynb"> <i class="fi-xnsuxx-google-colab"></i>
+                    Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Statistics Review</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/1%20-%20Stats%20Review/Problem%20Set%201.pdf"> Problems</a> </div>
+                  <div> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/1%20-%20Stats%20Review/Problem%20Set%201%20(Solution)/Problem%20Set%201%20(Solution).pdf"> Report</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- @Problem Set 2: Genomics -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Problem Set 2</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/2%20-%20Genomics/6.439%20-%20Problem%20Set%202.ipynb"> <i
+                      class="fi-xnsuxx-google-colab"></i> Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Genomics</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/2%20-%20Genomics/6.439%20%20-%20Problem%20Set%202.pdf"> Problems</a> </div>
+                  <div> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/2%20-%20Genomics/Problem%20Set%202%20(Solution)/Problem%20Set%202%20(Solution).pdf"> Report</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- @Problem Set 3: Economics -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Problem Set 3</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/3%20-%20Economics/6.439%20-%20Problem%20Set%203.ipynb"> <i
+                      class="fi-xnsuxx-google-colab"></i> Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Economics</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/3%20-%20Economics/6.439%20%20-%20Problem%20Set%203.pdf"> Problems</a> </div>
+                  <div> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/3%20-%20Economics/Problem%20Set%203%20(Solution)/Problem%20Set%203%20(Solution).pdf"> Report</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- @Problem Set 4: Criminal Networks -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Problem Set 4</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/4%20-%20Networks/6.439%20-%20Problem%20Set%204.ipynb"> <i
+                      class="fi-xnsuxx-google-colab"></i> Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Criminal Networks</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/4%20-%20Networks/6.439%20%20-%20Problem%20Set%204.pdf"> Problems</a> </div>
+                  <div> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/4%20-%20Networks/Problem%20Set%204%20(Solution)/Problem%20Set%204%20(Solution).pdf"> Report</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- @Problem Set 5: Environmental -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Problem Set 5</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm disabled" href="https://colab.research.google.com/github/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/5%20-%20Environmental/6.439%20-%20Problem%20Set%205.ipynb"> <i
+                      class="fi-xnsuxx-google-colab"></i> Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Environmental Data</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/5%20-%20Environmental/6.439%20%20-%20Problem%20Set%205.pdf"> Problems</a> </div>
+                  <div> <a class="btn card-button btn-sm disabled" href="https://github.com/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/5%20-%20Environmental/Problem%20Set%204%20(Solution)/Problem%20Set%205%20(Solution).pdf">
+                      Report</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- @At PUC-Chile -->
       <h1 class="section-title">At PUC-Chile</h1>
 
-      <h3>Pattern Recognition (in Spanish)</h3>
+      <!-- @Pattern Recognition -->
+      <div class="course-container">
+        <h3 class="course-title"> IIC3724 - Pattern Recognition  <a class="title-icon clickable-icon ms-2" href="https://github.com/pipeton8/pattern-recognition"><i class="fab fa-github"></i></a>  </h3>
 
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <!-- @Assignment 1: Letter Recognition -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Assignment 1</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/pattern-recognition/blob/main/assignments/1%20-%20Letter%20recognition/assignment1.ipynb"> <i class="fi-xnsuxx-google-colab"></i> Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Letter Recognition</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/pattern-recognition/tree/main/assignments/1%20-%20Letter%20recognition"> Description</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- @Assignment 2: Gender Recognition -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Assignment 2</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/pattern-recognition/blob/main/assignments/2%20-%20Gender%20recognition/assignment2_fdc.ipynb"> <i class="fi-xnsuxx-google-colab"></i>
+                    Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Gender Recognition</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/pattern-recognition/tree/main/assignments/2%20-%20Gender%20recognition"> Description</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- @Assignment 3: Skin Lesion Classifier -->
+          <div class="col">
+            <div class="card border-dark">
+              <div class="card-body">
+                <div class="coursework-card-title-wrapper d-flex justify-content-between mb-2">
+                  <div class="coursework-card-title">
+                    <h5>Assignment 3</h5>
+                  </div>
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/pattern-recognition/blob/main/assignments/3%20-%20Skin%20lesion%20classifier/assignment3_fdc.ipynb"> <i class="fi-xnsuxx-google-colab"></i>
+                    Colab</a>
+                </div>
+                <h6 class="card-subtitle text-muted mb-3"> Skin Lesion Classifier</h6>
+
+                <div class="btn-wrapper d-flex">
+
+                  <div class="me-4"> <a class="btn card-button btn-sm" href="https://github.com/pipeton8/pattern-recognition/tree/main/assignments/3%20-%20Skin%20lesion%20classifier"> Description</a> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
   </section>
 
 
