--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
           <a class="active nav-link scroll-link" href="#about-me">About me</a>
           <a class="nav-link scroll-link" href="#research">Research</a>
           <a class="nav-link" href="teaching.html">Teaching</a>
-          <span class="d-inline-block coursework-tooltip-lg" tabindex="0" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Under construction">
+          <a class="nav-link" href="coursework.html">Coursework</a>
+          <!-- <span class="d-inline-block coursework-tooltip-lg" tabindex="0" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Under construction">
             <a class="nav-link disabled" href="coursework.html">Coursework</a>
-          </span>
+          </span> -->
           </li>
         </ul>
       </div>
@@ -91,11 +92,11 @@
       <div class="image-container col-lg-5 col-md-6">
         <img class="title-image" src="images/felipe.jpg" alt="Felipe del Canto">
 
-        <div class="personal-icons">
-          <a href="http://github.com/pipeton8"><i class="personal-icon fab fa-github fa-lg"></i></a>
-          <a href="mailto:felipe.delcanto@icloud.com"><i class="personal-icon fas fa-envelope fa-lg"></i></a>
-          <a href="http://twitter.com/pipeton8"><i class="personal-icon fab fa-twitter fa-lg"></i></a>
-          <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon fab fa-orcid fa-lg"></i></a>
+        <div class="mt-1">
+          <a href="http://github.com/pipeton8"><i class="personal-icon clickable-icon fab fa-github fa-lg"></i></a>
+          <a href="mailto:felipe.delcanto@icloud.com"><i class="personal-icon clickable-icon fas fa-envelope fa-lg"></i></a>
+          <a href="http://twitter.com/pipeton8"><i class="personal-icon clickable-icon fab fa-twitter fa-lg"></i></a>
+          <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon clickable-icon fab fa-orcid fa-lg"></i></a>
         </div>
       </div>
 
