Activate Stats PS5 Colab button

--- a/coursework.html
+++ b/coursework.html
@@ -281,7 +281,7 @@
                   <div class="coursework-card-title">
                     <h5>Problem Set 5</h5>
                   </div>
-                  <a class="btn colab-button btn-sm disabled" href="https://colab.research.google.com/github/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/5%20-%20Environmental/6.439%20-%20Problem%20Set%205.ipynb"> <i
+                  <a class="btn colab-button btn-sm" href="https://colab.research.google.com/github/pipeton8/6.439-stats-comp-applications/blob/main/Assignments/5%20-%20Environmental/6.439%20-%20Problem%20Set%205.ipynb"> <i
                       class="fi-xnsuxx-google-colab"></i> Colab</a>
                 </div>
                 <h6 class="card-subtitle text-muted mb-3"> Environmental Data</h6>
